--- a/src/platform/bouffalolab/common/args.gni
+++ b/src/platform/bouffalolab/common/args.gni
@@ -17,4 +17,6 @@ declare_args() {
   chip_enable_factory_data_test = false
 
   chip_enable_ethernet = false
+
+  bouffalo_sdk_component_easyflash_enabled = false
 }
