--- a/examples/lighting-app/bouffalolab/bl616/BUILD.gn
+++ b/examples/lighting-app/bouffalolab/bl616/BUILD.gn
@@ -20,8 +20,8 @@ import("${bouffalolab_iot_sdk_build_root}/bl616/bouffalo_sdk.gni")
 import("${bouffalolab_iot_sdk_build_root}/common/bouffalolab_executable.gni")
 import("${build_root}/config/defaults.gni")
 import("${chip_root}/examples/common/pigweed/pigweed_rpcs.gni")
-import("${chip_root}/src/platform/device.gni")
 import("${chip_root}/src/platform/bouffalolab/common/args.gni")
+import("${chip_root}/src/platform/device.gni")
 
 import("${chip_root}/src/app/chip_data_model.gni")
 
@@ -60,10 +60,11 @@ bouffalo_sdk("sdk") {
 
   include_dirs = [
     "${example_dir}/bl616",
-    "${example_dir}/bl616/include",
-    "${examples_plat_dir}",
+    "${examples_plat_dir}/bl616",
+    "${examples_plat_dir}/bl616/lwipopts",
     "${examples_plat_dir}/common/route_hook",
     "${chip_root}/src/platform/bouffalolab/BL616",
+    "${chip_root}/src/platform/bouffalolab/common",
   ]
 
   defines = [
@@ -75,17 +76,18 @@ bouffalo_sdk("sdk") {
     "CHIP_UART_BAUDRATE=${baudrate}",
   ]
 
+  defines += [ "PW_RPC_ENABLED=${chip_enable_pw_rpc}" ]
   if (chip_enable_pw_rpc) {
     include_dirs += [ "${examples_plat_dir}/common/rpc" ]
     defines += [ "PW_RPC_ENABLED=1" ]
     defines += [ "DISABLE_PRINT=1" ]
-  } 
+  } else if (chip_build_libshell) {
+    include_dirs += [ "${examples_plat_dir}/common/plat" ]
+  }
 }
 
 chip_data_model("bouffalolab-lighting") {
   zap_file = "${example_dir}/data_model/lighting-app-wifi.zap"
-
-  zap_pregenerated_dir = "${chip_root}/zzz_generated/lighting-app/zap-generated"
   is_server = true
 }
 
@@ -99,23 +101,16 @@ bouffalolab_executable("lighting_app") {
     "START_ENTRY=main",
   ]
 
-  if (chip_config_network_layer_ble) {
-    defines += [
-      "CHIP_DEVICE_CONFIG_ENABLE_CHIPOBLE=1"
-    ]
-  }
-
   if (false == enable_reset_counter) {
     defines += [ "BOOT_PIN_RESET=2" ]
   }
 
-  if (chip_enable_factory_data) {
-    defines += [ "CONFIG_BOUFFALOLAB_FACTORY_DATA_ENABLE" ]
-  }
-
-  if (chip_enable_factory_data_test) {
-    defines += [ "CONFIG_BOUFFALOLAB_FACTORY_DATA_TEST" ]
-  }
+  defines += [ "CONF_ENABLE_FRAME_PTR=${enable_debug_frame_ptr}" ]
+  defines +=
+      [ "CONFIG_BOUFFALOLAB_FACTORY_DATA_ENABLE=${chip_enable_factory_data}" ]
+  defines += [
+    "CONFIG_BOUFFALOLAB_FACTORY_DATA_TEST=${chip_enable_factory_data_test}",
+  ]
 
   bl_plat_name = "bl616"
   sources = [
@@ -125,13 +120,16 @@ bouffalolab_executable("lighting_app") {
 
   defines += [ "BL616DK" ]
 
+  if (chip_config_network_layer_ble) {
+    defines += [ "CHIP_DEVICE_CONFIG_ENABLE_CHIPOBLE=1" ]
+  }
+
   sources += [
     "${chip_root}/examples/providers/DeviceInfoProviderImpl.cpp",
     "${example_dir}/common/AppTask.cpp",
     "${example_dir}/common/ZclCallbacks.cpp",
     "${examples_plat_dir}/common/bouffalo_sdk/demo_pwm.c",
     "${examples_plat_dir}/common/bouffalo_sdk/platform_port.c",
-#    "${examples_plat_dir}/common/bouffalo_sdk/uart.c",
     "${examples_plat_dir}/common/plat/LEDWidget.cpp",
     "${examples_plat_dir}/common/plat/OTAConfig.cpp",
     "${examples_plat_dir}/common/plat/main.cpp",
