--- a/src/platform/BUILD.gn
+++ b/src/platform/BUILD.gn
@@ -136,8 +136,8 @@ if (chip_device_platform != "none" && chip_device_platform != "external") {
     if (chip_device_platform == "linux" || chip_device_platform == "darwin" ||
         chip_device_platform == "tizen" || chip_device_platform == "android" ||
         chip_device_platform == "k32w0" || chip_device_platform == "webos" ||
-        chip_device_platform == "bl602" || chip_device_platform == "bl702" ||
-        chip_device_platform == "bl702l") {
+        chip_device_platform == "bl602" || chip_device_platform == "bl616" ||
+        chip_device_platform == "bl702" || chip_device_platform == "bl702l") {
       defines += [ "CHIP_DEVICE_CONFIG_ENABLE_CHIPOBLE=${chip_enable_ble}" ]
     }
 
@@ -244,7 +244,14 @@ if (chip_device_platform != "none" && chip_device_platform != "external") {
         "CHIP_DEVICE_LAYER_TARGET=bouffalolab/common",
         "CHIP_DEVICE_CONFIG_ENABLE_WIFI=${chip_enable_wifi}",
       ]
-    } else if (chip_device_platform == "bl702") {
+    } else if (chip_device_platform == "bl616") {
+      device_layer_target_define = "BL616"
+      defines += [
+        "CHIP_DEVICE_LAYER_TARGET=bouffalolab/common",
+        "CHIP_DEVICE_CONFIG_ENABLE_WIFI=${chip_enable_wifi}",
+      ]
+    }
+    else if (chip_device_platform == "bl702") {
       device_layer_target_define = "BL702"
       defines += [
         "CHIP_DEVICE_LAYER_TARGET=bouffalolab/common",
@@ -335,6 +342,7 @@ if (chip_device_platform != "none" && chip_device_platform != "external") {
       "TELINK",
       "MBED",
       "BL602",
+      "BL616",
       "BL702",
       "BL702L",
       "FAKE",
@@ -562,6 +570,8 @@ if (chip_device_platform != "none") {
       _platform_target = "webos"
     } else if (chip_device_platform == "bl602") {
       _platform_target = "bouffalolab/BL602"
+    } else if (chip_device_platform == "bl616") {
+      _platform_target = "bouffalolab/BL616"
     } else if (chip_device_platform == "bl702") {
       _platform_target = "bouffalolab/BL702"
     } else if (chip_device_platform == "bl702l") {
