--- a/src/platform/device.gni
+++ b/src/platform/device.gni
@@ -169,6 +169,8 @@ if (chip_device_platform == "cc13x2_26x2") {
   _chip_device_layer = "Ameba"
 } else if (chip_device_platform == "bl602") {
   _chip_device_layer = "bouffalolab/common"
+} else if (chip_device_platform == "bl616") {
+  _chip_device_layer = "bouffalolab/common"
 } else if (chip_device_platform == "bl702") {
   _chip_device_layer = "bouffalolab/common"
 } else if (chip_device_platform == "bl702l") {
@@ -259,9 +261,9 @@ assert(
         chip_device_platform == "ameba" || chip_device_platform == "cyw30739" ||
         chip_device_platform == "webos" || chip_device_platform == "mw320" ||
         chip_device_platform == "zephyr" || chip_device_platform == "beken" ||
-        chip_device_platform == "bl602" || chip_device_platform == "bl702" ||
-        chip_device_platform == "bl702l" || chip_device_platform == "mt793x" ||
-        chip_device_platform == "SiWx917" ||
+        chip_device_platform == "bl602" || chip_device_platform == "bl616"  ||
+        chip_device_platform == "bl702" || chip_device_platform == "bl702l" || 
+        chip_device_platform == "mt793x" || chip_device_platform == "SiWx917" ||
         chip_device_platform == "openiotsdk" || chip_device_platform == "asr" ||
         chip_device_platform == "stm32",
     "Please select a valid value for chip_device_platform")
