--- a/examples/lighting-app/bouffalolab/bl616/BUILD.gn
+++ b/examples/lighting-app/bouffalolab/bl616/BUILD.gn
@@ -129,7 +129,7 @@ bouffalolab_executable("lighting_app") {
     "${example_dir}/common/AppTask.cpp",
     "${example_dir}/common/ZclCallbacks.cpp",
     "${examples_plat_dir}/common/bouffalo_sdk/demo_pwm.c",
-    "${examples_plat_dir}/common/bouffalo_sdk/platform_port.c",
+    "${examples_plat_dir}/common/bouffalo_sdk/platform_port.cpp",
     "${examples_plat_dir}/common/plat/LEDWidget.cpp",
     "${examples_plat_dir}/common/plat/OTAConfig.cpp",
     "${examples_plat_dir}/common/plat/main.cpp",
