--- a/examples/lighting-app/bouffalolab/bl616/args.gni
+++ b/examples/lighting-app/bouffalolab/bl616/args.gni
@@ -27,7 +27,7 @@ pw_rpc_CONFIG = "$dir_pw_rpc:disable_global_mutex"
 #  "${chip_root}/examples/lighting-app/bouffalolab/bl616",
 #]
 
-chip_detail_logging = false
+chip_detail_logging = true
 
 pw_build_LINK_DEPS = [
   "$dir_pw_assert:impl",
