--- a/src/lwip/BUILD.gn
+++ b/src/lwip/BUILD.gn
@@ -64,10 +64,13 @@ if (lwip_platform == "cc13xx_26xx") {
   import("//build_overrides/bouffalolab_iot_sdk.gni")
 } else if (lwip_platform == "bl616") {
   import("//build_overrides/bouffalolab_iot_sdk.gni")
+  import("${chip_root}/src/platform/device.gni")
 } else if (lwip_platform == "bl702") {
   import("//build_overrides/bouffalolab_iot_sdk.gni")
+  import("${chip_root}/src/platform/device.gni")
 } else if (lwip_platform == "bl702l") {
   import("//build_overrides/bouffalolab_iot_sdk.gni")
+  import("${chip_root}/src/platform/device.gni")
 } else if (lwip_platform == "nxp") {
   import("//build_overrides/nxp_sdk.gni")
 } else if (lwip_platform == "mw320") {
@@ -155,7 +158,9 @@ if (current_os == "zephyr" || current_os == "mbed") {
   group("all") {
     deps = [ ":lwip" ]
   }
-} else if (lwip_platform == "bl616") {
+} else if (lwip_platform == "bl616" && defined(chip_enable_openthread) &&
+           chip_enable_openthread == false) {
+
   group("lwip") {
     public_deps = [ ":lwip_buildconfig" ]
     public_deps += [ "${bouffalolab_iot_sdk_build_root}/bl616:bouffalo_sdk" ]
