--- a/src/platform/bouffalolab/BL602/BUILD.gn
+++ b/src/platform/bouffalolab/BL602/BUILD.gn
@@ -57,9 +57,7 @@ static_library("BL602") {
     ]
   }
 
-  defines =
-      [ "CONFIG_BOUFFALOLAB_FACTORY_DATA_ENABLE=${chip_enable_factory_data}" ]
-  if (chip_enable_factory_data || chip_enable_factory_data_test) {
+  if (chip_enable_factory_data) {
     sources += [
       "../common/FactoryDataProvider.cpp",
       "../common/FactoryDataProvider.h",
