--- a/src/platform/bouffalolab/BL702L/BUILD.gn
+++ b/src/platform/bouffalolab/BL702L/BUILD.gn
@@ -59,9 +59,7 @@ static_library("BL702L") {
 
   deps = [ "${chip_root}/src/platform/logging:headers" ]
 
-  defines =
-      [ "CONFIG_BOUFFALOLAB_FACTORY_DATA_ENABLE=${chip_enable_factory_data}" ]
-  if (chip_enable_factory_data || chip_enable_factory_data_test) {
+  if (chip_enable_factory_data) {
     sources += [
       "../common/FactoryDataProvider.cpp",
       "../common/FactoryDataProvider.h",
