add build options for easyflash and littlefs

--- a/src/platform/bouffalolab/BL702/BUILD.gn
+++ b/src/platform/bouffalolab/BL702/BUILD.gn
@@ -36,7 +36,6 @@ static_library("BL702") {
   sources += [
     "../../FreeRTOS/SystemTimeSupport.cpp",
     "../../SingletonConfigurationManager.cpp",
-    "../common/BLConfig.cpp",
     "../common/ConfigurationManagerImpl.cpp",
     "../common/ConnectivityManagerImpl.cpp",
     "../common/DiagnosticDataProviderImpl.cpp",
@@ -66,6 +65,13 @@ static_library("BL702") {
       "../common/FactoryDataProvider.cpp",
       "../common/FactoryDataProvider.h",
     ]
+  }
+  
+  if (bouffalo_sdk_component_easyflash_enabled) {
+    sources += [ "../common/BLConfig.cpp"]
+  }
+  else {
+    sources += [ "../common/BLConfig_littlefs.cpp"]
   }
 
   if (chip_enable_wifi) {
