--- a/src/lib/shell/BUILD.gn
+++ b/src/lib/shell/BUILD.gn
@@ -90,19 +90,11 @@ static_library("shell") {
              chip_device_platform == "bl702" ||
              chip_device_platform == "bl702l" ||
              chip_device_platform == "bl616") {
-
-    sources += [
-      "streamer_bouffalolab.cpp",
-    ]
+    sources += [ "streamer_bouffalolab.cpp" ]
     if (chip_device_platform == "bl616") {
-      sources += [
-        "MainLoopBouffalolab.cpp",
-      ]
-    }
-    else {
-      sources += [
-        "MainLoopDefault.cpp",
-      ]
+      sources += [ "MainLoopBouffalolab.cpp" ]
+    } else {
+      sources += [ "MainLoopDefault.cpp" ]
     }
   } else if (chip_device_platform == "cc13x4_26x4") {
     sources += [
