--- a/src/platform/bouffalolab/BL616/BUILD.gn
+++ b/src/platform/bouffalolab/BL616/BUILD.gn
@@ -42,9 +42,7 @@ static_library("BL616") {
   ]
 
   if (chip_enable_ota_requestor) {
-    sources += [
-      "../common/OTAImageProcessorImpl_bflb.cpp",
-    ]
+    sources += [ "../common/OTAImageProcessorImpl_bflb.cpp" ]
   }
 
   if (chip_enable_ble) {
@@ -62,17 +60,16 @@ static_library("BL616") {
   }
 
   if (bouffalo_sdk_component_easyflash_enabled) {
-    sources += [ "../common/BLConfig.cpp"]
+    sources += [ "../common/BLConfig.cpp" ]
+  } else {
+    sources += [ "../common/BLConfig_littlefs.cpp" ]
   }
-  else {
-    sources += [ "../common/BLConfig_littlefs.cpp"]
-  }
-  
+
   deps = [
     "${chip_root}/src/credentials:credentials_header",
     "${chip_root}/src/platform/logging:headers",
   ]
-  
+
   if (chip_enable_wifi) {
     sources += [
       "ConfigurationManagerImpl.cpp",
